--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    
+    <main class="common">
+        <header class="header">
+            <h2 class="title">G3 Architects</h2>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </header>
+        <div class="banner-content">
+            <h1 class="banner-title">Brand New <br> Group of Architects</h1>
+            <p class="banner-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="banner-btn btn">Explore More</button>
+            <img src="images/banner.png" alt="banner">
+        </div>
+    </main>
+    <!-- feature container -->
+    <section class="features-container common">
+        <div class="feature-images">
+            <img src="images/team1.png" alt="">  
+            <img src="images/team2.png" alt="">  
+            <img src="images/team3.png" alt="">  
+            <img src="images/team4.png" alt="">  
+        </div>
+        <div class="feature-content">
+            <h2 class="feature-title title"><span class="span1">Quick list</span> of Our <br> <span class="span2">Features</span></h2>
+            <p class="feature-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="feature-btn btn banner-btn">Explore More</button>
+        </div>
+    </section>
+    <!-- features you will love and enjoy -->
+    <section class="more-features-container">
+        <div class="more-feature-content">
+
+        </div>
+        <div class="more-feature-image">
+            
+        </div>
+    </section>
 </body>
+
 </html>
