--- a/index.html
+++ b/index.html
@@ -43,14 +43,82 @@
         </div>
     </section>
     <!-- features you will love and enjoy -->
-    <section class="more-features-container">
+    <section class="more-features-container common">
         <div class="more-feature-content">
-
+            <h2 class="more-feature-title title">Features you will <br> love & enjoy</h2>
+            <p class="more-feature-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <div class="boxes">
+                <div class="box">
+                    <h3 class="box-title">Dexktop & Mobile Version</h3>
+                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="box">
+                    <h3 class="box-title">Drag & Drop Builder</h3>
+                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="box">
+                    <h3 class="box-title">Awesome Modern Design</h3>
+                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="box">
+                    <h3 class="box-title">Super Easy to Edit</h3>
+                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
         </div>
         <div class="more-feature-image">
-            
+            <img src="images/architect.png" alt="">
+            <span class="more-feature-image-btn"><button class="btn"><span class="span1">10+ Year</span><br><span class="span2">Experience</span></button></span>
         </div>
     </section>
+    <!-- facts section -->
+    <section class="facts-container common">
+        <h2 class="fact-title title">Some Facts</h2>
+        <p class="fact-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+    </section>
+    <!-- award section -->
+    <section class="award-container common">
+        <div class="award">
+            <img src="images/icons/ribon.png" alt="">
+            <h3>54</h3>
+            <p>Awards Winnings</p>
+        </div>
+        <div class="award">
+            <img src="images/icons/projects.png" alt="">
+            <h3>1458</h3>
+            <p>Project Finished</p>
+        </div>
+        <div class="award">
+            <img src="images/icons/customers.png" alt="">
+            <h3>590</h3>
+            <p>Clients Worked</p>
+        </div>
+        <div class="award">
+            <img src="images/icons/email.png" alt="">
+            <h3>22578</h3>
+            <p>Email Send</p>
+        </div>
+    </section>
+    <!-- sponsor section -->
+    <section class="sponsor-container common">
+        <div class="sponsor-content">
+            <h2 class="sponsor-title title">Our Sponspors</h2>
+            <p class="sponsor-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+        </div>
+        <div class="sponsor-logo">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+        </div>
+    </section>
+    <!-- footer section -->
+    <footer class="common">
+        <div class="footer-bg">
+            <h4 class="banner-subtitle">All rights reserved copyright@2023 startup landing page design</h4>
+        </div>
+    </footer>
 </body>
 
 </html>
