--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -106,11 +106,11 @@
             <p class="sponsor-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
         </div>
         <div class="sponsor-logo">
-            <img src="images/sponsors/spotify.png" alt="">
-            <img src="images/sponsors/amazon.png" alt="">
-            <img src="images/sponsors/google.png" alt="">
-            <img src="images/sponsors/telerama.png" alt="">
-            <img src="images/sponsors/figma.png" alt="">
+            <img src="images/sponsors/spotify.png" alt="spotify">
+            <img src="images/sponsors/amazon.png" alt="amazon">
+            <img src="images/sponsors/google.png" alt="google">
+            <img src="images/sponsors/telerama.png" alt="telerama">
+            <img src="images/sponsors/figma.png" alt="figma">
         </div>
     </section>
     <!-- footer section -->
