--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
     <!-- feature container -->
     <section class="features-container common">
         <div class="feature-images">
-            <img src="images/team1.png" alt="">  
-            <img src="images/team2.png" alt="">  
-            <img src="images/team3.png" alt="">  
-            <img src="images/team4.png" alt="">  
+            <img src="images/team1.png" alt="">
+            <img src="images/team2.png" alt="">
+            <img src="images/team3.png" alt="">
+            <img src="images/team4.png" alt="">
         </div>
         <div class="feature-content">
-            <h2 class="feature-title title"><span class="span1">Quick list</span> of Our <br> <span class="span2">Features</span></h2>
-            <p class="feature-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <h2 class="feature-title title"><span class="span1">Quick list</span> of Our <br> <span
+                    class="span2">Features</span></h2>
+            <p class="feature-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by injected humour, or randomised words which
+                don't look even</p>
             <button class="feature-btn btn banner-btn">Explore More</button>
         </div>
     </section>
@@ -46,35 +49,43 @@
     <section class="more-features-container common">
         <div class="more-feature-content">
             <h2 class="more-feature-title title">Features you will <br> love & enjoy</h2>
-            <p class="more-feature-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <p class="more-feature-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum
+                available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                words which don't look even</p>
             <div class="boxes">
                 <div class="box">
                     <h3 class="box-title">Dexktop & Mobile Version</h3>
-                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
                 <div class="box">
                     <h3 class="box-title">Drag & Drop Builder</h3>
-                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
                 <div class="box">
                     <h3 class="box-title">Awesome Modern Design</h3>
-                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
                 <div class="box">
                     <h3 class="box-title">Super Easy to Edit</h3>
-                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    <p class="box-subtitle">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
             </div>
         </div>
         <div class="more-feature-image">
             <img src="images/architect.png" alt="">
-            <span class="more-feature-image-btn"><button class="btn"><span class="span1">10+ Year</span><br><span class="span2">Experience</span></button></span>
+            <span class="more-feature-image-btn"><button class="btn"><span class="span1">10+ Year</span><br><span
+                        class="span2">Experience</span></button></span>
         </div>
     </section>
     <!-- facts section -->
     <section class="facts-container common">
         <h2 class="fact-title title">Some Facts</h2>
-        <p class="fact-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <p class="fact-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available, but the
+            majority have suffered alteration.</p>
     </section>
     <!-- award section -->
     <section class="award-container common">
@@ -103,14 +114,43 @@
     <section class="sponsor-container common">
         <div class="sponsor-content">
             <h2 class="sponsor-title title">Our Sponspors</h2>
-            <p class="sponsor-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            <p class="sponsor-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available,
+                but <br> the majority have suffered alteration.</p>
         </div>
         <div class="sponsor-logo">
-            <img src="images/sponsors/spotify.png" alt="spotify">
-            <img src="images/sponsors/amazon.png" alt="amazon">
-            <img src="images/sponsors/google.png" alt="google">
-            <img src="images/sponsors/telerama.png" alt="telerama">
-            <img src="images/sponsors/figma.png" alt="figma">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+        </div>
+    </section>
+
+    <!-- bonus section -->
+    <section class="bonus-container common">
+        <div class="bonus-content">
+            <h2 class="bonus-title title">Meet Our Team</h2>
+            <div class="bonus-team-container">
+                <div class="bonus-item">
+                    <img src="images/team1.png" alt="">
+                    <h4>Alex Smith</h4>
+                    <h5>Age: 46</h5>
+                    <p>Software Engineer</p>
+                </div>
+                <div class="bonus-item">
+                    <img src="images/team2.png" alt="">
+                    <h4>Jhon Steves</h4>
+                    <h5>Age: 40</h5>
+                    <p>Software Engineer</p>
+                </div>
+                <div class="bonus-item">
+                    <img src="images/team3.png" alt="">
+                    <h4>Karim Mitwale</h4>
+                    <h5>Age: 26</h5>
+                    <p>UI Designer</p>
+                </div>
+                
+            </div>
         </div>
     </section>
     <!-- footer section -->
