--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
             <p class="sponsor-subtitle banner-subtitle">There are many variations of passages of Lorem Ipsum available,
                 but <br> the majority have suffered alteration.</p>
         </div>
+
+        <!-- i have face some difficulty with this section (sponsor-logo). this section show when i open html file from my local folder but when it comes to live server or github it's not shown there. i try to check image name spelling and add ./ thes but none works and i submit a post on this issue on our facebook groups but nobody gives me a proper answer.  -->
+
         <div class="sponsor-logo">
             <img src="images/sponsors/spotify.png" alt="">
             <img src="images/sponsors/amazon.png" alt="">
